# vcluster

./: .gitignore  .hintrc  README.md  developer.md  index.html  package-lock.json  package.json  todo.md  tsconfig.json  tsconfig.node.json  vcluster.db-shm  vcluster.db-wal
public/: splashscreen.html
public/assets/: index-0d010f46.js
public/houdini/: ripple.js
src/: App.css  App.tsx  MainApp.tsx  main.tsx  styles.css  var.css
src-splash-screen/: index.html  package-lock.json  package.json
src-splash-screen/src/: splash-screen.ts
src-splash-screen/src/components/: loading.ts
src-tauri/: .gitignore  .tauriignore  Cargo.toml  README.md  tauri.conf.json  vcluster.db-shm  vcluster.db-wal  vcluster.sql
src-tauri/assets/: kill.bat  start.bat
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/cmd/: __kill.rs  __launch.rs  __sql.rs  app.rs  cluster.rs  create_cluster.rs  launch.rs  mod.rs  run_script.rs
src-tauri/src/interface/: crud.rs  mod.rs
src-tauri/src/model/: app_api.rs  mod.rs  pkg_config.rs  resp.rs  service_config.rs  start.rs
src-tauri/src/store/: state.rs
src-tauri/src/util/: date_util.rs  init.rs  logger.rs  mod.rs
src/api/: index.ts
src/locale/: en_US.ts  index.ts  zh_CN.ts
src/model/: VCluster.ts
src/permission/: global.ts  type.d.ts  utils.ts
src/store/: hook.ts  store.ts
src/store/clusters/: clusters.reducer.ts  clusters.state.ts
src/store/lang/: lang.actions.ts  lang.reducer.ts
src/types/: VCluster.d.ts
src/util/: constans.ts  form.ts  global.ts  modal.css  modal.tsx  util.ts
(+82 files in other folders)
